# ape-fatfs

./: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  log.txt
examples/: cat.rs  ls.rs  mkfatfs.rs  partition.rs  write.rs
src/: boot_sector.rs  dir.rs  dir_entry.rs  error.rs  file.rs  fs.rs  io.rs  lib.rs  table.rs  time.rs
tests/: format.rs  read.rs  write.rs
