[package]
name = "ape-fatfs"
version = "0.2.0"
authors = ["Rafał Harabień <rafalh92@outlook.com>", "Charles Thompson"]
edition = "2021"
repository = "https://github.com/Gip-Gip/ape-fatfs"
readme = "README.md"
keywords = ["fat", "filesystem", "no_std", "embedded"]
categories = ["filesystem", "embedded"]
license = "MIT"
description = "versitile FAT library for embedded systems"
exclude = [
    "resources/*",
]

[features]
# Use Rust std library
std = []
# LFN (Long File Name) support
lfn = []
# Use dynamic allocation. When used without std please enable core_io/collections
alloc = []
# Full Unicode support. Disabling it reduces code size by avoiding Unicode-aware character case conversion
unicode = []
# Enable only error-level logging
log_level_error = []
# Enable logging levels warn and up
log_level_warn  = ["log_level_error"]
# Enable logging levels info and up
log_level_info  = ["log_level_warn"]
# Enable logging levels debug and up
log_level_debug = ["log_level_info"]
# Enable all logging levels: trace and up
log_level_trace = ["log_level_debug"]

# Default features
default = ["chrono", "std", "alloc", "lfn", "unicode", "log_level_trace"]

[dependencies]
bitflags = "1.0"
log = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }
embedded-io = "0.4.0"
bytemuck = { version = "1.13.1", features = ["derive"] }

[dev-dependencies]
env_logger = "0.9"
fscommon = "0.1"
